**  denotes quite substantial/important changes
*** denotes really big changes 

1.4-0

** Negative binomial handling changed. `negbin' family added: adapted from 
   MASS to work with gam outer iteration fitting. `gam.negbin' fitting 
   routine added in order to enable use of `negbin' with outer iteration.
   See ?gam.neg.bin for details.

** `by' variables can now be factor variables.

** `smoothCon' now handles `by' variables and centering constraints 
   automatically, removing the need for smooth constructors to do so.
   `PredMat' handles `by' variables automatically. Users can over-ride 
   this behaviour when adding smooth classes, if needed - see 
   documentation.

** `gamm' now supports nested smooth terms, and uses the same, constraint 
   absorbed, parameterization as `gam'.

* `magic' and `gam.fit3' now allow log smoothing parameters to be a 
  linear transformation of a smaller set of underlying smoothing parameters.

* `mgcv' based fitting has been removed as an option in `gam', as has 
  Pearson based GCV. In consequence `am' argument removed from 
  `gam.method' and `globit' removed from `gam.control'.

* `gam.fit2' has been removed, since gam.fit3 is simply better.

* the `absorb.cons' option has been removed from `gam.control'.

* `fix.family.link' and `fix.family.var' bug fix --- only return 
   family unmodified is all required derivative functions are present.

* `smoothCon' now returns a list of smooth objects to facilitate factor
  `by' variables.

* `smoothCon' makes smooth object labels more informative, if there are 
  `by' variables... this also makes default plots more informative.

* `plot.gam' indicates `by' variables in labels

* `gamm.setup' modified to call `gam.setup' for most of the setup, leaving 
  just the re-parameterization step to do. 

* `gamm' modified to allow constraint absorption (same as `gam')

* `gamm' bug fixed whereby "cc" smooths would get the wrong null space 