@@ -12,9 +12,8 @@ anova.gam,coef.pdIdnot,coef.pdTens,
        gam.side,gam.method,
        get.var,logDet.pdIdnot,
        initial.sp,logLik.gam,
-       magic, magic.post.proc, mgcv, mgcv.control, mgcv.find.theta, 
-       mgcv.get.scale, model.matrix.gam, mono.con, mroot, negbin, 
-        new.name, 
+       magic, magic.post.proc, mgcv, mgcv.control, model.matrix.gam, 
+        mono.con, mroot, negbin, new.name, 
        notExp,notExp2,notLog,notLog2,pcls,null.space.dimension, 
        pdConstruct.pdIdnot,pdFactor.pdIdnot,pdMatrix.pdIdnot,pdIdnot,
        pdConstruct.pdTens,pdFactor.pdTens,pdMatrix.pdTens,pdTens,
